# sipua

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml
.github/workflows/: tests.yml
docs/: call.rst  conf.py  dialog.rst  highlevel.rst  index.rst  transaction.rst  transport.rst  utils.rst
examples/: sip-client.py  sip-server.py
src/sipua/: __init__.py  application.py  call.py  dialog.py  transaction.py  transport.py  utils.py
tests/: test_call.py  test_dialog.py  test_transaction.py  test_transport.py  test_utils.py  utils.py
